upgrade vertx to 3.5.2, upgrade mvn versions to support jdk 10, upgrade docker build with openjdk10, code reformatting and cleanup